<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Choose_A_Class"
        android:id="@+id/textView_create_event"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_courseSpinner_create_event"
        android:layout_below="@+id/textView_create_event"
        android:layout_centerHorizontal="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Date"
        android:id="@+id/textView_date_create_event"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/editText_create_event"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/textView_date_create_event"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/editText_create_event"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button_extra_activity"
            android:id="@+id/button_cancel_create_event"
            android:layout_marginLeft="70dp"
            style="@style/MyBackgroundColor"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_button_extra_activity"
            android:id="@+id/button_save_create_event"
            android:layout_marginLeft="70dp"
            style="@style/MyBackgroundColor"/>
    </LinearLayout>

</RelativeLayout>
