<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="match_parent"
    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Choose_A_Class"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:gravity="center_vertical"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_courseSpinner_extra_activity"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Time_Studied"
        android:id="@+id/textView2"
        android:layout_below="@+id/spinner_courseSpinner_extra_activity"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal" />

    <TimePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/extra_activity_time_picker"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp">


        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button_extra_activity"
            android:id="@+id/button_cancel_extra_activity"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="23dp"
            style="@style/MyBackgroundColor"
            android:layout_marginLeft="60dp" />

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/save_button_extra_activity"
            android:id="@+id/button_save_extra_activity"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="23dp"
            style="@style/MyBackgroundColor"
            android:layout_marginLeft="50dp" />

    </LinearLayout>

</LinearLayout>