<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.cs616.studybuddy_mockup.StatisticsDetails"
    android:orientation="vertical"
    android:id="@+id/statsDetailsLayout"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Course Name"
        android:id="@+id/statistics_details_course_name"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:textSize="30sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Total_Time_studied"
        android:id="@+id/textView4"

        android:layout_below="@+id/statistics_details_course_name"
        android:layout_alignEnd="@+id/statistics_details_course_name"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal" />

    <com.cs616.studybuddy_mockup.LabeledCircleView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/circleView1"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Amount_Of_Study_sessions"
        android:id="@+id/textView5"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp" />

    <com.cs616.studybuddy_mockup.LabeledCircleView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/circleView2"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Avg_Time_Per_Session"
        android:id="@+id/textView6"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal" />

    <com.cs616.studybuddy_mockup.LabeledCircleView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/circleView3"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp" />

</LinearLayout>
